--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,13 @@
   "editor.formatOnSave": true,
   "files.insertFinalNewline": true,
   "importSorter.importStringConfiguration.tabSize": 2,
+  "eslint.validate": [{
+      "language": "typescript",
+      "autoFix": true
+    },
+    {
+      "language": "typescriptreact",
+      "autoFix": true
+    }
+  ]
 }
