Add edge to the travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script:
 - npm run test
 deploy:
   provider: npm
+  edge: true
   email: zinovik@gmail.com
   on:
     repo: zinovik/node-router-telegram
